--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-indiana-drag-scroll": "^1.8.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-scrollspy": "^3.4.3",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^0.2.4"
   },
