--- a/package.json
+++ b/package.json
@@ -1,57 +1,54 @@
 {
-  "name": "pizza_pizza",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@date-io/moment": "^1.3.13",
-    "@fortawesome/fontawesome-svg-core": "^1.2.34",
-    "@fortawesome/free-solid-svg-icons": "^5.15.2",
-    "@fortawesome/react-fontawesome": "^0.1.14",
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/lab": "^4.0.0-alpha.57",
-    "@material-ui/pickers": "^3.3.10",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.3",
-    "@testing-library/user-event": "^12.6.0",
-    "csvtojson": "^2.0.10",
-    "moment": "^2.29.1",
-    "react": "^17.0.1",
-    "react-beautiful-dnd": "^13.0.0",
-    "react-dnd": "^11.1.3",
-    "react-dnd-html5-backend": "^11.1.3",
-    "react-dom": "^17.0.1",
-    "react-indiana-drag-scroll": "^1.8.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^2.1.3",
-    "react-scrollspy": "^3.4.3",
-    "universal-cookie": "^4.0.4",
-    "web-vitals": "^0.2.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "typescript": "^4.1.3"
-  }
+	"name": "pizza_pizza",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@date-io/moment": "^1.3.13",
+		"@fortawesome/fontawesome-svg-core": "^1.2.34",
+		"@fortawesome/free-solid-svg-icons": "^5.15.2",
+		"@fortawesome/react-fontawesome": "^0.1.14",
+		"@material-ui/core": "^4.11.3",
+		"@material-ui/lab": "^4.0.0-alpha.57",
+		"@material-ui/pickers": "^3.3.10",
+		"@reduxjs/toolkit": "^1.9.1",
+		"@testing-library/jest-dom": "^5.11.9",
+		"@testing-library/react": "^11.2.3",
+		"@testing-library/user-event": "^12.6.0",
+		"moment": "^2.29.1",
+		"react": "^17.0.1",
+		"react-beautiful-dnd": "^13.0.0",
+		"react-dom": "^17.0.1",
+		"react-indiana-drag-scroll": "^1.8.0",
+		"react-router-dom": "^5.2.0",
+		"react-scripts": "^5.0.1",
+		"universal-cookie": "^4.0.4",
+		"web-vitals": "^0.2.4"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"typescript": "^4.1.3"
+	}
 }
